<resources>
    <string name="app_name">Coolky</string>
    <string name="ingredientsText">Ингредиенты</string>
    <string name="cuisineText">Кухня</string>
    <string name="typeOfDishText">Тип блюда</string>
    <string name="recipesSearchText">Поиск</string>
    <string name="cookingTimeText">Время приготовления до</string>
    <string name="feed">Лента</string>
    <string name="myRecipes">Мои рецепты</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="darkMode">Тёмная тема</string>
    <string name="myRecipesInDeveloping">Мои рецепты. В разработке</string>
    <string name="recommendedInDeveloping">Рекомендуемое. В разработке</string>
    <string name="recipesSearchInDeveloping">Поиск рецептов. В разработке</string>
    <string name="settingsInDeveloping">Настройки. В разработке</string>
    <string name="favoritesInDeveloping">Избранное. В разработке</string>
    <string name="recipesSearchTextOnButton">Поиск</string>
    <string name="choose">Выбрать</string>
    <string name="min">мин</string>
    <string name="searchingRecipeInFavorites">Поиска рецепта в избранном</string>
    <string name="min">мин.</string>

    <string-array name="typesOfDishes">
        <item>Первое</item>
        <item>Второе</item>
        <item>Салат</item>
        <item>Закуска</item>
        <item>Выпечка</item>
        <item>Десерт</item>
        <item>Консервирование</item>
        <item>Соус</item>
        <item>Напиток</item>
    </string-array>

    <string name="chooseTypeOfDishText">Выберите тип блюда</string>
    <string name="ok">Ok</string>

    <string-array name="cuisines">
        <item>Итальянская</item>
        <item>Корейская</item>
        <item>Русская</item>
        <item>Французская</item>
        <item>Японская</item>
    </string-array>

    <string name="chooseCuisineText">Выберите кухню</string>
    <string name="ingredientsTabHeaderText">Ингредиенты</string>
    <string name="stepsTabHeaderText">Приготовление</string>
    <string name="portionsText">порций</string>

    <string name="inputIngredient">Введите ингредиент</string>
    <string name="nothingIsFoundForYourRequest">По вашему запросу ничего не найдено</string>
    <string name="searchRecipe">Поиск рецепта</string>
</resources>