<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feed"
        android:title="@string/feed"
        android:icon="@drawable/ic_action_recommended"/>

    <item
        android:id="@+id/myRecipes"
        android:title="@string/myRecipes"
        android:icon="@drawable/ic_action_my_recipes"/>

    <item
        android:id="@+id/recipesSearch"
        android:title="@string/recipesSearchText"
        android:icon="@drawable/ic_action_recipes_search"/>

    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_action_favorites"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"/>

</menu>